--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demuxer",
   "version": "2.0.0",
   "description": "A utility for transmux ts/mp4/flv",
-  "main": "dist/demuxer.cjs.js",
+  "main": "dist/demuxer.all.cjs.js",
   "directories": {
     "doc": "doc",
     "test": "test"
