perf: ⚡️ let package support tree-shake

--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
   "bugs": {
     "url": "https://github.com/goldvideo/demuxer/issues"
   },
-  "homepage": "https://github.com/goldvideo/demuxer#readme"
+  "homepage": "https://github.com/goldvideo/demuxer#readme",
+  "sideEffects": false
 }
